Restructured file/folder Support building the application bundle

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "How to use demo for webpack-dev-server",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "start": "webpack-dev-server --hot --port 3000 --content-base public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
